tests/baselines/reference/errorWithSameNameType.errors.txt
c.ts(7,5): error TS2454: Variable 'a' is used before being assigned.
c.ts(7,5): error TS2367: This comparison appears to be unintentional because the types 'import("a").F' and 'import("b").F' have no overlap.
c.ts(7,11): error TS2454: Variable 'b' is used before being assigned.
c.ts(11,1): error TS2741: Property 'foo1' is missing in type 'import("b").F' but required in type 'import("a").F'.
c.ts(11,5): error TS2454: Variable 'b' is used before being assigned.


==== a.ts (0 errors) ====
    export interface F {
        foo1: number
    }
    
==== b.ts (0 errors) ====
    export interface F {
        foo2: number
    }
    
==== c.ts (5 errors) ====
    import * as A from './a'
    import * as B from './b'
    
    let a: A.F
    let b: B.F
    
    if (a === b) {
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
        ~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'import("a").F' and 'import("b").F' have no overlap.
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
    }
    
    a = b
    ~
!!! error TS2741: Property 'foo1' is missing in type 'import("b").F' but required in type 'import("a").F'.
!!! related TS2728 a.ts:2:5: 'foo1' is declared here.
        ~
!!! error TS2454: Variable 'b' is used before being assigned.
    